src/styles.css
@media (max-width: 768px) and (min-width: 320px){
/* FUNDO */
#geralzao{
    background-color: #99d4c7;   
}
/* BORDAS E FUNDO DAS BORDAS */
.borda {
    width: 98%;
    height: 98%;
    margin-left: 1%;
    margin-right: 1%;
    margin-top: 5px;
    border-radius: 10px;
    border-color: #1f3e2e;
    border-style: dashed;
    border-width: 3px;
    background-color: #7d4c6f;
    background-image: url('../img/imgInicio/fundo.jpg');
    background-size: cover;
    background-repeat: no-repeat;
}
/* TÍTULO */
#titulo {
    padding: 5%;
    margin-top: 1%;
    margin-bottom: 1%;
    text-align: center;
    text-shadow: 2px 1px black;
    font-size: 300%;
    font-style: italic;
    font-weight: bold;
    color: #33654b;
    width: 100%;
    height: auto;
    font-family: 'Times New Roman', Times, serif;
}
/* MENU */
#menu {
    padding: 1%;
}
ul {
    text-align: center;
}
/* RODAPÉ */
footer {
    margin-left: 2%;
    margin-top: 1%;
}
h6 {
    font-size: 50%;
    font-style: italic;
    font-family: 'Times New Roman', Times, serif;
    margin: 0;
    padding: 0;
    color: #880181;
}
}

@media (max-width: 1024px) and (min-width: 769px){
  
}


@media (min-width: 1025px){

}

